# hello-espcx

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  justfile
apps/ble/central/: Cargo.toml
apps/ble/central/docs/: hello-ble-central.md
apps/ble/central/src/: lib.rs  main.rs  tests.rs
apps/ble/central/tests/: hil_real.rs
apps/ble/common/: Cargo.toml
apps/ble/common/src/: lib.rs
apps/ble/peripheral/: Cargo.toml  rust-toolchain.toml
apps/ble/peripheral/docs/: peripheral-abstraction-roadmap.md
apps/ble/peripheral/src/: ble_bas_peripheral.rs  lib.rs  main.rs
apps/ble/peripheral/src/app/: advertising.rs  mod.rs  runtime.rs  server.rs  session.rs  tasks.rs
apps/ble/peripheral/src/gap/: advertising.rs  mod.rs  peripheral_loop.rs
apps/ble/peripheral/src/gatt/: mod.rs  session.rs
apps/ble/peripheral/src/services/: battery.rs  bulk.rs  device_info.rs  echo.rs  mod.rs  status.rs
contrib/: prompts.txt
contrib/trouble/examples/nrf52/: README.md
crates/btleplus/: Cargo.toml
crates/btleplus/docs/: btleplus.md  btleplus.zh-CN.md  device-selection-roadmap.md
crates/btleplus/src/: error.rs  lib.rs
crates/btleplus/src/gap/: adapter.rs  connection.rs  display.rs  filter.rs  mod.rs  peripheral.rs  selection.rs
crates/btleplus/src/gap/adapter/: tests.rs
crates/btleplus/src/gap/filter/: tests.rs
crates/btleplus/src/gap/selection/: tests.rs
crates/btleplus/src/gatt/: client.rs  db.rs  mod.rs
crates/easyble/: Cargo.toml
crates/easyble/docs/: easyble.md  easyble.zh-CN.md
crates/easyble/src/: lib.rs
crates/easyble/src/gap/: advertising.rs  init.rs  mod.rs
crates/easyble/src/gatt/: connected.rs  mod.rs  session.rs
crates/winble/: Cargo.toml
crates/winble/docs/: winble.md
crates/winble/src/: error.rs  gatt.rs  lib.rs
