[workspace]
resolver = "2"
members = [
    "apps/ble/common",
    "apps/ble/central",
    "crates/winble",
]
exclude = [
    "apps/ble/peripheral",  # esp-hal conflicts with windows crate's critical-section
]

[profile.dev]
opt-level = "s"

[profile.release]
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1
