[package]
name = "hello-ble-central"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "central"
path = "src/main.rs"

[features]
default = []

[dependencies]
anyhow = "1"
postcard = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
hello-ble-common = { path = "../common" }
btleplus = { path = "../../../crates/btleplus" }
