[package]
name = "hello-ble-peripheral"
version = "0.1.0"
edition = "2024"

[dependencies]
trouble-host = { version = "0.6.0", features = ["default-packet-pool-mtu-255", "derive", "scan"] }
embassy-futures = { version = "0.1.2" }
embassy-time = { version = "0.5.1" }
embassy-sync = { version = "0.7" }
static_cell = { version = "2.1" }
embassy-executor = { version = "0.9" }
bt-hci = { version = "0.8" }
heapless = "0.9"
hello-ble-common = { path = "../common" }
postcard = { version = "1", default-features = false }
serde = { version = "1", default-features = false }

rtt-target = "0.6"

esp-alloc = { path = "../../../vendor/esp-hal/esp-alloc" }
esp-bootloader-esp-idf = { path = "../../../vendor/esp-hal/esp-bootloader-esp-idf" }
esp-hal = { path = "../../../vendor/esp-hal/esp-hal", features = ["log-04", "unstable"] }
esp-radio = { path = "../../../vendor/esp-hal/esp-radio", features = ["ble", "log-04", "unstable"] }
esp-rtos = { path = "../../../vendor/esp-hal/esp-rtos", features = ["esp-radio", "embassy", "log-04"] }

[features]
default = ["esp32c6"]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-rtos/esp32c6",
    "esp-radio/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
]
